# ALIA-PAL

./: README.md  decision_engine.py  pyproject.toml
langgraph/: graph.py  main.py  monitor_agent.py  profile_agent.py
langgraph-crewai/my_agent/: agent.py
langgraph-crewai/my_agent/crew/: agents.py  crew.py  tasks.py
langgraph-crewai/my_agent/utils/: state.py
langgraph-example/: README.md  langgraph.json
langgraph-example/my_agent/: agent.py
langgraph-example/my_agent/crew/: tasks.py
langgraph-example/my_agent/utils/: nodes.py  state.py
my_agent/: agent.py  requirements.txt
my_agent/crew/: agents.py  crew.py
my_agent/utils/: nodes.py
src/: main.py
src/database/: database.py
src/langgraph_system/: agents.py  edges.py  graph_creation.py  langgraph_app.py  main.py  nodes.py  routers.py  state.py  student_data.json  tools.py
src/langgraph_system/config/: edges_config.yaml  nodes_config.yaml
src/tutor_ai_crew/: crew.py  main.py
src/tutor_ai_crew/config/: agents.yaml  tasks.yaml
src/tutor_ai_crew/output/: adapted_quiz.json  lesson.md  outputs_demo.md  quiz.json  teaching_prompts.md
