[tool.poetry]
name = "tutor_ai_crew"
version = "0.1.0"
description = "tutor_ai_crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = ">=0.70.1,<1.0.0" }


[tool.poetry.scripts]
tutor_ai_crew = "tutor_ai_crew.main:run"
run_crew = "tutor_ai_crew.main:run"
train = "tutor_ai_crew.main:train"
replay = "tutor_ai_crew.main:replay"
test = "tutor_ai_crew.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
